# splendor-rl

./: .gitignore  README.md  jugar_vs_model.py  pyproject.toml  requirements.txt
Splendor-AI/src/splendor/agents/our_agents/ppo/: ppo_agent.py  utils.py
Splendor-AI/src/splendor/splendor/gym/envs/: splendor_env.py
scripts/: avaluar_runs.py  dsac_splendor.py  pipeline_entrenament.py  ppo_splendor.py  run_optuna.py
tfm_splendor/agents/: H1Agent.py  H2Agent.py  H3Agent.py  TrainedDSACAgent.py  TrainedPPOAgent.py  action_utils.py
tfm_splendor/entrenament/: __init__.py  artifact_utils.py  callbacks.py  config.py  custom_wrappers.py  envs.py  evaluation_utils.py  utils.py
tfm_splendor/entrenament/dsac/: __init__.py  model.py  policy.py
tfm_splendor/entrenament/tuning/: __init__.py  dsac.py  ppo.py
