[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm-splendor"
version = "0.1.0"
description = "Codi del TFM per entrenaments a Splendor"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tfm_splendor*"]